tests/basic/check/prim/070.pan.out
tests/basic/check/prim/070.pan:2:7-11: error: invalid subtype: ğŸ™ <: â„¤
tests/basic/check/prim/070.pan:5:7-11: error: invalid subtype: ğ”¹ <: â„¤
tests/basic/check/prim/070.pan:8:7-14: error: invalid subtype: ğ•Š <: â„¤