tests/basic/check/prim/070.pan
f70 : int
f70 = unit

f71 : int
f71 = true

f72 : int
f72 = "hello"

f73 : int
f73 = 'a'

